Jupyter updates added bs4 with db file

--- a/jupyter/documentation.ipynb
+++ b/jupyter/documentation.ipynb
@@ -24,25 +24,23 @@
    "source": [
     "\n",
     "# Installing dependencies if not already installed\n",
-    "!pip install requests httpx pymilvus --root-user-action=ignore\n",
-    "!pip install langchain langchain-core langchain-mistralai langchain-cohere langchain-milvus langchain-community langchain-text-splitters langchain-huggingface --root-user-action=ignore\n",
+    "!pip install httpx pymilvus --root-user-action=ignore\n",
+    "!pip install langchain langchain-core langchain-mistralai langchain-cohere langchain-milvus langchain-community beautifulsoup4 langchain-text-splitters langchain-huggingface --root-user-action=ignore\n",
     "\n",
     "import os\n",
-    "from dotenv import load_dotenv\n",
     "from pymilvus import connections, utility\n",
-    "import sqlite3\n",
     "\n",
     "from langchain.chains.combine_documents import create_stuff_documents_chain\n",
     "from langchain.schema import Document\n",
-    "from langchain_core.prompts import ChatPromptTemplate\n",
+    "from langchain_core.prompts import PromptTemplate, ChatPromptTemplate\n",
     "from langchain_mistralai.chat_models import ChatMistralAI\n",
     "from langchain_milvus import Milvus\n",
     "from langchain_community.document_loaders import RecursiveUrlLoader\n",
+    "from bs4 import BeautifulSoup\n",
     "from langchain_text_splitters import RecursiveCharacterTextSplitter\n",
     "from langchain.chains import create_retrieval_chain\n",
     "from langchain_huggingface import HuggingFaceEmbeddings\n",
     "\n",
-    "from requests.exceptions import HTTPError\n",
     "from httpx import HTTPStatusError\n",
     "import warnings\n",
     "\n",
@@ -70,7 +68,7 @@
     "CORPUS_SOURCE = 'https://www.csusb.edu/its'\n",
     "MISTRAL_API_KEY = os.environ.get(\"MISTRAL_API_KEY\")\n",
     "MILVUS_URI = \"milvus/jupyter_milvus_vector.db\"\n",
-    "MODEL_NAME = \"sentence-transformers/all-MiniLM-L6-v2\"\n",
+    "MODEL_NAME = \"sentence-transformers/all-MiniLM-L12-v2\"\n",
     "\n",
     "print(\"ENV variables defined.\")"
    ]
@@ -92,7 +90,7 @@
    "source": [
     "def vector_store_check(uri):\n",
     "    \"\"\"\n",
-    "    Returns response on whether the milvus database exists\n",
+    "    Returns response on whether the vector storage exists\n",
     "\n",
     "    Returns:\n",
     "        boolean\n",
@@ -102,7 +100,7 @@
     "    os.makedirs(head[0], exist_ok=True)\n",
     "    \n",
     "    # Connect to the Milvus database\n",
-    "    connections.connect(\"default\",uri=uri)\n",
+    "    connections.connect(\"default\", uri=uri)\n",
     "\n",
     "    # Return True if exists, False otherwise\n",
     "    return utility.has_collection(\"IT_support\")\n",
@@ -133,11 +131,68 @@
     "        embedding function\n",
     "    \"\"\"\n",
     "    embedding_function = HuggingFaceEmbeddings(model_name=MODEL_NAME)\n",
-    "\n",
-    "    print(\"Embedding function loaded.\")\n",
+    "    \n",
     "    return embedding_function\n",
     "\n",
     "print(\"Function `get_embedding_function` defined.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Function to remove clean the text\n",
+    "\n",
+    "This function refines the extracted text by removing `extra whitespace` and `blank lines`. It splits the text into individual lines, removes leading and trailing spaces from each line, and then filters out empty lines."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def clean_text(text):\n",
+    "    \"\"\"Further clean the text by removing extra whitespace and new lines.\"\"\"\n",
+    "    lines = (line.strip() for line in text.splitlines())\n",
+    "    cleaned_lines = [line for line in lines if line]\n",
+    "    return '\\n'.join(cleaned_lines)\n",
+    "\n",
+    "print(\"Function `clean_text` defined.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Function to extract clean text from HTML\n",
+    "\n",
+    "This function removes unnecessary HTML elements like `<script>, <style>, <header>, <footer>, and <nav>` from the provided HTML content, extracting only the main readable text. It uses BeautifulSoup to parse the HTML and locate the main content section, if available. This makes it useful for extracting clean, structured text from web pages, making the data more accessible."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def clean_text_from_html(html_content):\n",
+    "    \"\"\"Clean HTML content to extract main text.\"\"\"\n",
+    "    soup = BeautifulSoup(html_content, 'html.parser')\n",
+    "\n",
+    "    # Remove unnecessary elements\n",
+    "    for script_or_style in soup(['script', 'style', 'header', 'footer', 'nav']):\n",
+    "        script_or_style.decompose()\n",
+    "\n",
+    "    main_content = soup.find('main')\n",
+    "    if main_content:\n",
+    "        content = main_content.get_text(separator='\\n')\n",
+    "    else:\n",
+    "        content = soup.get_text(separator='\\n')\n",
+    "\n",
+    "    return clean_text(content)\n",
+    "\n",
+    "print(\"Function `clean_text_from_html` defined.\")"
    ]
   },
   {
@@ -167,10 +222,15 @@
     "        prevent_outside=True,\n",
     "        base_url=CORPUS_SOURCE\n",
     "        )\n",
-    "    documents = loader.load()\n",
+    "    raw_documents = loader.load()\n",
     "    \n",
-    "    print(\"Documents loaded.\")\n",
-    "    return documents\n",
+    "    # Ensure documents are cleaned\n",
+    "    cleaned_documents = []\n",
+    "    for doc in raw_documents:\n",
+    "        cleaned_text = clean_text_from_html(doc.page_content)\n",
+    "        cleaned_documents.append(Document(page_content=cleaned_text, metadata=doc.metadata))\n",
+    "\n",
+    "    return cleaned_documents\n",
     "\n",
     "print(\"Function `load_documents_from_web` defined.\")"
    ]
@@ -203,7 +263,7 @@
     "    # Load an existing vector store\n",
     "    vector_store = Milvus(\n",
     "        collection_name=\"IT_support\",\n",
-    "        embedding_function = get_embedding_function(),\n",
+    "        embedding_function=get_embedding_function(),\n",
     "        connection_args={\"uri\": uri},\n",
     "    )\n",
     "    \n",
@@ -245,6 +305,7 @@
     "        is_separator_regex=False,\n",
     "    )\n",
     "    \n",
+    "    # Split the documents into chunks\n",
     "    docs = text_splitter.split_documents(documents)\n",
     "    \n",
     "    print(\"Documents successfully split.\")\n",
@@ -315,20 +376,19 @@
     "    Initialize the vector store for the RAG model\n",
     "\n",
     "    Args:\n",
-    "        uri (str, optional): Path to the local milvus db. Defaults to MILVUS_URI.\n",
+    "        uri (str, optional): Path to the local vector storage. Defaults to MILVUS_URI.\n",
     "\n",
     "    Returns:\n",
     "        vector_store: The vector store created\n",
     "    \"\"\"\n",
     "    if vector_store_check(uri):\n",
     "        vector_store = load_existing_db(uri)\n",
-    "        print(\"Embeddings loaded from existing Database\")\n",
+    "        print(\"Embeddings loaded from existing storage\")\n",
     "    else:\n",
     "        embeddings = get_embedding_function()\n",
     "        print(\"Embeddings Loaded\")\n",
     "        documents = load_documents_from_web()\n",
     "        print(\"Documents Loaded\")\n",
-    "        print(len(documents))\n",
     "    \n",
     "        # Split the documents into chunks\n",
     "        docs = split_documents(documents=documents)\n",
@@ -337,7 +397,7 @@
     "        vector_store = create_vector_store(docs, embeddings, uri)\n",
     "\n",
     "    print(\"Milvus successfully initialized.\")\n",
-    "    #return vector_store\n",
+    "    return vector_store\n",
     "\n",
     "print(\"Function `initialize_milvus` defined.\")"
    ]
@@ -441,7 +501,7 @@
     "\n",
     "    # Load the vector store and create the retriever\n",
     "    vector_store = load_existing_db(uri=MILVUS_URI)\n",
-    "    retriever = vector_store.as_retriever()\n",
+    "    retriever = vector_store.as_retriever(search_type=\"mmr\", search_kwargs={\"score_threshold\": 0.7, \"k\":5})\n",
     "    try:\n",
     "        document_chain = create_stuff_documents_chain(model, prompt)\n",
     "        print(\"Document Chain Created\")\n",
@@ -497,7 +557,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "response = query_rag(\"how do I connect to the wifi?\")\n",
+    "response = query_rag(input(\"Enter your query: \"))\n",
     "\n",
     "print(response)"
    ]
