Suppress Hugging Face tokenizers parallelism warning and requirement already satisfied warning

--- a/jupyter/documentation.ipynb
+++ b/jupyter/documentation.ipynb
@@ -22,10 +22,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Suppress Hugging Face tokenizers parallelism warning\n",
+    "os.environ[\"TOKENIZERS_PARALLELISM\"] = \"false\"\n",
     "\n",
-    "# Installing dependencies if not already installed\n",
-    "!pip install httpx pymilvus --root-user-action=ignore\n",
-    "!pip install langchain langchain-core langchain-mistralai langchain-cohere langchain-milvus langchain-community beautifulsoup4 langchain-text-splitters langchain-huggingface --root-user-action=ignore\n",
+    "# Installing dependencies if not already installed, suppressing \"Requirement already satisfied\" warnings\n",
+    "!pip install -q httpx pymilvus --root-user-action=ignore\n",
+    "!pip install -q langchain langchain-core langchain-mistralai langchain-cohere langchain-milvus langchain-community beautifulsoup4 langchain-text-splitters langchain-huggingface --root-user-action=ignore\n",
+    "\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
     "\n",
     "import os\n",
     "from pymilvus import connections, utility\n",
@@ -35,16 +40,13 @@
     "from langchain_core.prompts import PromptTemplate, ChatPromptTemplate\n",
     "from langchain_mistralai.chat_models import ChatMistralAI\n",
     "from langchain_milvus import Milvus\n",
-    "from langchain_community.document_loaders import RecursiveUrlLoader\n",
+    "from langchain_community.document_loaders import WebBaseLoader, RecursiveUrlLoader\n",
     "from bs4 import BeautifulSoup\n",
     "from langchain_text_splitters import RecursiveCharacterTextSplitter\n",
     "from langchain.chains import create_retrieval_chain\n",
     "from langchain_huggingface import HuggingFaceEmbeddings\n",
     "\n",
     "from httpx import HTTPStatusError\n",
-    "import warnings\n",
-    "\n",
-    "warnings.filterwarnings('ignore')\n",
     "\n",
     "print(\"Dependencies imported successfully.\")"
    ]
