--- a/jupyter/documentation.ipynb
+++ b/jupyter/documentation.ipynb
@@ -22,6 +22,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "import logging\n",
+    "\n",
+    "# Configure logging\n",
+    "logging.basicConfig(\n",
+    "    level=logging.INFO,  # Set the logging level to INFO\n",
+    "    format=\"%(asctime)s - %(name)s - %(levelname)s - %(message)s\",\n",
+    ")\n",
+    "logger = logging.getLogger(__name__)\n",
+    "\n",
     "# Suppress Hugging Face tokenizers parallelism warning\n",
     "os.environ[\"TOKENIZERS_PARALLELISM\"] = \"false\"\n",
     "\n",
@@ -32,15 +42,14 @@
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
     "\n",
-    "import os\n",
     "from pymilvus import connections, utility\n",
     "\n",
     "from langchain.chains.combine_documents import create_stuff_documents_chain\n",
     "from langchain.schema import Document\n",
-    "from langchain_core.prompts import PromptTemplate, ChatPromptTemplate\n",
+    "from langchain_core.prompts import ChatPromptTemplate\n",
     "from langchain_mistralai.chat_models import ChatMistralAI\n",
     "from langchain_milvus import Milvus\n",
-    "from langchain_community.document_loaders import WebBaseLoader, RecursiveUrlLoader\n",
+    "from langchain_community.document_loaders import RecursiveUrlLoader\n",
     "from bs4 import BeautifulSoup\n",
     "from langchain_text_splitters import RecursiveCharacterTextSplitter\n",
     "from langchain.chains import create_retrieval_chain\n",
@@ -142,11 +151,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "### Function to remove clean the text\n",
-    "\n",
-    "This function refines the extracted text by removing `extra whitespace` and `blank lines`. It splits the text into individual lines, removes leading and trailing spaces from each line, and then filters out empty lines."
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -166,11 +171,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "### Function to extract clean text from HTML\n",
-    "\n",
-    "This function removes unnecessary HTML elements like `<script>, <style>, <header>, <footer>, and <nav>` from the provided HTML content, extracting only the main readable text. It uses BeautifulSoup to parse the HTML and locate the main content section, if available. This makes it useful for extracting clean, structured text from web pages, making the data more accessible."
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -269,7 +270,7 @@
     "        connection_args={\"uri\": uri},\n",
     "    )\n",
     "    \n",
-    "    print(\"Vector store loaded.\")\n",
+    "    logger.info(\"Vector store loaded\")\n",
     "    return vector_store\n",
     "\n",
     "print(\"Function `load_existing_db` defined.\")"
@@ -310,7 +311,7 @@
     "    # Split the documents into chunks\n",
     "    docs = text_splitter.split_documents(documents)\n",
     "    \n",
-    "    print(\"Documents successfully split.\")\n",
+    "    logger.info(\"Documents successfully split\")\n",
     "    return docs\n",
     "\n",
     "print(\"Function `split_documents` defined.\")"
@@ -352,7 +353,7 @@
     "        drop_old=True,\n",
     "    )\n",
     "    \n",
-    "    print(\"Vector store created.\")\n",
+    "    logger.info(\"Vector store created\")\n",
     "    return vector_store\n",
     "\n",
     "print(\"Function `create_vector_store` defined.\")"
@@ -385,20 +386,19 @@
     "    \"\"\"\n",
     "    if vector_store_check(uri):\n",
     "        vector_store = load_existing_db(uri)\n",
-    "        print(\"Embeddings loaded from existing storage\")\n",
+    "        logger.info(\"Embeddings loaded from existing storage\")\n",
     "    else:\n",
     "        embeddings = get_embedding_function()\n",
-    "        print(\"Embeddings Loaded\")\n",
+    "        logger.info(\"Embeddings Loaded\")\n",
     "        documents = load_documents_from_web()\n",
-    "        print(\"Documents Loaded\")\n",
+    "        logger.info(\"Documents Loaded\")\n",
     "    \n",
     "        # Split the documents into chunks\n",
     "        docs = split_documents(documents=documents)\n",
-    "        print(\"Documents Splitting completed\")\n",
+    "        logger.info(\"Documents Splitting completed\")\n",
     "    \n",
     "        vector_store = create_vector_store(docs, embeddings, uri)\n",
-    "\n",
-    "    print(\"Milvus successfully initialized.\")\n",
+    "    logger.info(\"Milvus successfully initialized\")\n",
     "    return vector_store\n",
     "\n",
     "print(\"Function `initialize_milvus` defined.\")"
@@ -461,7 +461,7 @@
     "        (\"human\", \"<question>{input}</question>\\n\\n<context>{context}</context>\"),\n",
     "    ])\n",
     "\n",
-    "    print(\"Prompt template defined.\")\n",
+    "    logger.info(\"Prompt template defined\")\n",
     "    return prompt\n",
     "\n",
     "print(\"Function `create_prompt` defined.\")"
@@ -497,7 +497,7 @@
     "    \"\"\"\n",
     "    # Define the model\n",
     "    model = ChatMistralAI(model='open-mistral-7b')\n",
-    "    print(\"Model Loaded\")\n",
+    "    logger.info(\"Model Loaded\")\n",
     "\n",
     "    prompt = create_prompt()\n",
     "\n",
@@ -506,18 +506,22 @@
     "    retriever = vector_store.as_retriever(search_type=\"mmr\", search_kwargs={\"score_threshold\": 0.7, \"k\":5})\n",
     "    try:\n",
     "        document_chain = create_stuff_documents_chain(model, prompt)\n",
-    "        print(\"Document Chain Created\")\n",
+    "        logger.info(\"Document Chain Created\")\n",
     "\n",
     "        retrieval_chain = create_retrieval_chain(retriever, document_chain)\n",
-    "        print(\"Retrieval Chain Created\")\n",
+    "        logger.info(\"Retrieval Chain Created\")\n",
     "    \n",
     "        # Generate a response to the query\n",
     "        response = retrieval_chain.invoke({\"input\": f\"{query}\"})\n",
     "    except HTTPStatusError as e:\n",
-    "        print(f\"HTTPStatusError: {e}\")\n",
+    "        logger.error(f\"HTTPStatusError: {e}\")\n",
     "        if e.response.status_code == 429:\n",
-    "            return \"I am currently experiencing high traffic. Please try again later.\", []\n",
-    "        return \"I am unable to answer this question at the moment. Please try again later.\", []\n",
+    "            error_message = \"I am currently experiencing high traffic. Please try again later.\"\n",
+    "            logger.error(error_message)\n",
+    "            return error_message, []\n",
+    "        error_message = \"I am unable to answer this question at the moment. Please try again later.\"\n",
+    "        logger.error(error_message)\n",
+    "        return error_message, []\n",
     "    \n",
     "    # logic to add sources to the response\n",
     "    max_relevant_sources = 4 # number of sources at most to be added to the response\n",
