added documentation fot clean_text and clean_text_from_html

--- a/jupyter/documentation.ipynb
+++ b/jupyter/documentation.ipynb
@@ -151,7 +151,10 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Function to Clean Text\n",
+    "This function removes extra whitespace and blank lines from a given text input, returning a more readable, compact version of the text."
+   ]
   },
   {
    "cell_type": "code",
@@ -171,7 +174,10 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Function to Clean and Extract Text from HTML Content\n",
+    "This function parses HTML content, removes unnecessary elements (like scripts, styles, headers, footers, and navigation elements), and extracts the main text. If a <main> element is present, the function prioritizes its content. The cleaned content is returned as plain text, free from HTML tags and unnecessary whitespace."
+   ]
   },
   {
    "cell_type": "code",
