--- a/jupyter/documentation.ipynb
+++ b/jupyter/documentation.ipynb
@@ -153,7 +153,7 @@
    "metadata": {},
    "source": [
     "### Function to Clean Text\n",
-    "This function removes extra whitespace and blank lines from a given text input, returning a more readable, compact version of the text."
+    "This function removes `extra whitespace` and `blank lines` from a given text input, returning a more readable, compact version of the text."
    ]
   },
   {
@@ -176,7 +176,7 @@
    "metadata": {},
    "source": [
     "### Function to Clean and Extract Text from HTML Content\n",
-    "This function parses HTML content, removes unnecessary elements (like scripts, styles, headers, footers, and navigation elements), and extracts the main text. If a <main> element is present, the function prioritizes its content. The cleaned content is returned as plain text, free from HTML tags and unnecessary whitespace."
+    "This function parses HTML content, removes unnecessary elements `scripts, styles, headers, footers, and navigation elements`, and extracts the main text. If a element is present, the function prioritizes its content. The cleaned content is returned as plain text, free from `HTML tags` and unnecessary whitespace."
    ]
   },
   {
