Jupyter Notebook Formatting Markdowns

--- a/jupyter/documentation.ipynb
+++ b/jupyter/documentation.ipynb
@@ -4,7 +4,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Jupyter Notebook Interactive Mode Demo"
+    "# ITS Chatbot\n",
+    "\n",
+    "This chatbot is as an educational tool that's built to answer questions related to the CSUSB's [Information Technology Services](https://www.csusb.edu/its). The chatbot was built by team 1 for [CSE 6550: Software Engineering Concepts](https://catalog.csusb.edu/coursesaz/cse/)\n",
+    "\n",
+    "In this notebook, we will demonstrate how the chatbot uses retrieval augemented generation (RAG) to answer questions using the ITS website as the primary data source.\n",
+    "\n",
+    "[![GitHub](https://img.shields.io/badge/GitHub-black?style=flat&logo=github&logoColor=white)](https://github.com/DrAlzahraniProjects/csusb_fall2024_cse6550_team1) \n",
+    "[![Wiki](https://img.shields.io/badge/Wiki-blue?style=flat&logo=wikipedia&logoColor=white)](https://github.com/DrAlzahraniProjects/csusb_fall2024_cse6550_team1/wiki)\n",
+    "\n",
+    "## Table of Contents\n",
+    "1. [Setup](#1-Setup)  \n",
+    "    - 1.1. [Import Required Libraries](#1.1-Import-Required-Libraries)  \n",
+    "    - 1.2. [Set Up Environment Variables](#1.2-Set-Up-Environment-Variables)  \n",
+    "2. [Vector Store and Embeddings](#2-Vector-Store-and-Embeddings)  \n",
+    "    - 2.1. [Create Vector Store](#2.1-Create-Vector-Store)  \n",
+    "    - 2.2. [Fetch Embedding Model](#2.2-Fetch-Embedding-Model)  \n",
+    "3. [Document Handling](#3-Document-Handling)  \n",
+    "    - 3.1. [Text Cleaning](#3.1-Text-Cleaning)  \n",
+    "    - 3.2. [Clean and Extract Text from HTML](#3.2-Clean-and-Extract-Text-from-HTML)  \n",
+    "    - 3.3. [Load Documents from Web](#3.3-Load-Documents-from-Web)  \n",
+    "    - 3.4. [Split Documents](#3.4-Split-Documents)  \n",
+    "4. [Milvus and Vector Store Management](#4-Milvus-and-Vector-Store-Management)  \n",
+    "    - 4.1. [Load Existing Vector Store](#4.1-Load-Existing-Vector-Store)  \n",
+    "    - 4.2. [Initialize Milvus](#4.2-Initialize-Milvus)  \n",
+    "5. [RAG Workflow](#5-RAG-Workflow)  \n",
+    "    - 5.1. [Create RAG Prompt](#5.1-Create-RAG-Prompt)  \n",
+    "    - 5.2. [Query RAG](#5.2-Query-RAG)  \n",
+    "    - 5.3. [Response from RAG](#5.3-Response-from-RAG)  \n",
+    "6. [Contributors](#6-Contributors)\n"
    ]
   },
   {
