--- a/jupyter/documentation.ipynb
+++ b/jupyter/documentation.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# ITS Chatbot\n",
     "\n",
-    "This chatbot is as an educational tool that's built to answer questions related to the CSUSB's [Information Technology Services](https://www.csusb.edu/its). The chatbot was built by team 1 for [CSE 6550: Software Engineering Concepts](https://catalog.csusb.edu/coursesaz/cse/)\n",
+    "This chatbot is an educational tool that's built to answer questions related to the CSUSB's [Information Technology Services](https://www.csusb.edu/its). The chatbot was built by team 1 for [CSE 6550: Software Engineering Concepts](https://catalog.csusb.edu/coursesaz/cse/)\n",
     "\n",
     "In this notebook, we will demonstrate how the chatbot uses retrieval augemented generation (RAG) to answer questions using the ITS website as the primary data source.\n",
     "\n",
@@ -15,23 +15,24 @@
     "\n",
     "## Table of Contents\n",
     "1. [Setup](#1-Setup)  \n",
-    "    - 1.1. [Import Required Libraries](#1.1-Import-Required-Libraries)  \n",
+    "    - 1.1. [Import Required Libraries](#1.1-Importing-Required-Libraries)  \n",
     "    - 1.2. [Set Up Environment Variables](#1.2-Set-Up-Environment-Variables)  \n",
-    "2. [Vector Store and Embeddings](#2-Vector-Store-and-Embeddings)  \n",
-    "    - 2.1. [Create Vector Store](#2.1-Create-Vector-Store)  \n",
-    "    - 2.2. [Fetch Embedding Model](#2.2-Fetch-Embedding-Model)  \n",
-    "3. [Document Handling](#3-Document-Handling)  \n",
-    "    - 3.1. [Text Cleaning](#3.1-Text-Cleaning)  \n",
-    "    - 3.2. [Clean and Extract Text from HTML](#3.2-Clean-and-Extract-Text-from-HTML)  \n",
-    "    - 3.3. [Load Documents from Web](#3.3-Load-Documents-from-Web)  \n",
-    "    - 3.4. [Split Documents](#3.4-Split-Documents)  \n",
-    "4. [Milvus and Vector Store Management](#4-Milvus-and-Vector-Store-Management)  \n",
-    "    - 4.1. [Load Existing Vector Store](#4.1-Load-Existing-Vector-Store)  \n",
-    "    - 4.2. [Initialize Milvus](#4.2-Initialize-Milvus)  \n",
-    "5. [RAG Workflow](#5-RAG-Workflow)  \n",
-    "    - 5.1. [Create RAG Prompt](#5.1-Create-RAG-Prompt)  \n",
-    "    - 5.2. [Query RAG](#5.2-Query-RAG)  \n",
-    "    - 5.3. [Response from RAG](#5.3-Response-from-RAG)  \n",
+    "2. [Vector Store and Embeddings](#2.-Vector-Store-and-Embeddings)  \n",
+    "    - 2.1. [Create Vector Store](#2.2-Function-to-fetch-the-embedding-model)  \n",
+    "    - 2.2. [Fetch Embedding Model](#2.2-Function-to-fetch-the-embedding-model)  \n",
+    "3. [Document Handling](#3.-Document-Handling)  \n",
+    "    - 3.1. [Clean Text](#3.1-Function-to-Clean-Text)  \n",
+    "    - 3.2. [Clean HTML Content](#3.2-Function-to-Clean-and-Extract-Text-from-HTML-Content)  \n",
+    "    - 3.3. [Load Documents from the Web](#3.3-Function-for-loading-documents-from-the-web) \n",
+    "4. [Milvus Vector Store Management](#4.-Milvus-Vector-Store-Management) \n",
+    "    - 4.1. [Load Existing Vector Store](#4.1-Function-to-load-existing-vector-store-(Milvus-database))\n",
+    "    - 4.2. [Split Documents into Chunks](#4.2-Function-to-split-documents)   \n",
+    "    - 4.3. [Create New Vector Store](#4.3-Function-to-Create-New-Vector-Store-(Milvus-database))  \n",
+    "    - 4.4. [Initialize Milvus](#4.4-Core-function-for-initializing-Milvus)  \n",
+    "5. [RAG Workflow](#5.-RAG-Workflow)  \n",
+    "    - 5.1. [Create RAG Prompt](#5.1-Function-to-create-RAG-prompt)  \n",
+    "    - 5.2. [Query RAG](#5.2-Function-to-query-RAG-model)  \n",
+    "    - 5.3. [Retrieve RAG Response](#5.3-Get-response-from-RAG)  \n",
     "6. [Contributors](#6-Contributors)\n"
    ]
   },
@@ -39,7 +40,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Importing required libraries\n",
+    "## 1. Setup"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.1 Importing Required Libraries\n",
     "\n",
     "Importing core libraries: dotenv for environment management, requests and httpx for HTTP requests, pymilvus for vector storage and langchain.Extensions of langchain include core, mistralai, milvus, community, text-splitters and huggingface."
    ]
@@ -92,7 +100,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Setting up environment variables\n",
+    "### 1.2 Set Up Environment Variables\n",
     "\n",
     "\n",
     "Load the necessary environment variables for RAG operation. `CORPUS_SOURCE` can be modified to load a different corpus, `MISTRAL_API_KEY` stores the MistralAI API key, `MILVUS_URI` provides the path for the milvus lite database file, and `MODEL_NAME` specifies the embedding model for the corpus."
@@ -116,7 +124,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Function to create Vector Store (Milvus database)\n",
+    "## 2. Vector Store and Embeddings"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.1 Function to Check Vector Store (Milvus database)\n",
     "\n",
     "Creates the `/milvus` directory if it doesn’t already exist, then attempts to connect to the database file. Returns a boolean indicating whether the database was successfully found."
    ]
@@ -151,7 +166,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Function to fetch the embedding model\n",
+    "### 2.2 Function to fetch the embedding model\n",
     "\n",
     "Loads the embedding model from HuggingFace using the `MODEL_NAME` environment variable and returns the initialized embedding model."
    ]
@@ -180,7 +195,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Function to Clean Text\n",
+    "## 3. Document Handling"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.1 Function to Clean Text\n",
     "This function removes `extra whitespace` and `blank lines` from a given text input, returning a more readable, compact version of the text."
    ]
   },
@@ -203,7 +225,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Function to Clean and Extract Text from HTML Content\n",
+    "### 3.2 Function to Clean and Extract Text from HTML Content\n",
     "This function parses HTML content, removes unnecessary elements `scripts, styles, headers, footers, and navigation elements`, and extracts the main text. If a element is present, the function prioritizes its content. The cleaned content is returned as plain text, free from `HTML tags` and unnecessary whitespace."
    ]
   },
@@ -236,7 +258,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Function for loading documents from the web\n",
+    "### 3.3 Function for loading documents from the web\n",
     "\n",
     "Recursively load documents from the web according to `CORPUS_SOURCE`, ensuring that only pages within the base_url of `CORPUS_SOURCE` are retrieved. The function returns the loaded documents."
    ]
@@ -276,7 +298,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Function to load existing vector store (Milvus database)\n",
+    "## 4. Milvus Vector Store Management"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4.1 Function to load existing vector store (Milvus database)\n",
     "\n",
     "Accepts the path to the database and embedding function to establish a connection with the database, returning the connected vector store."
    ]
@@ -314,7 +343,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Function to split documents\n",
+    "### 4.2 Function to split documents\n",
     "\n",
     "Takes the documents loaded from `load_documents_from_web` and splits them into chunks of 1000 characters. Overlaps 300 characters to preserve context. Returns the documents split into chunks."
    ]
@@ -355,7 +384,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Function to create vector store (Milvus database)\n",
+    "### 4.3 Function to Create New Vector Store (Milvus database)\n",
     "\n",
     "Uses the documents retrieved from `load_documents_from_web`, the embedding function from `get_embedding_function`, and the database path to establish the vector store. It returns the vector store once it has been created."
    ]
@@ -397,7 +426,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Core function for initializing Milvus\n",
+    "### 4.4 Core function for initializing Milvus\n",
     "\n",
     "This is the primary function for initializing Milvus, utilizing the previously defined functions to fully set up the vector store. Executing `initialize_milvus` will invoke all the necessary functions required for creating the vector store."
    ]
@@ -442,7 +471,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Initializing vector store (Milvus database)\n",
+    "### 4.5 Initializing vector store (Milvus database)\n",
     "\n",
     "This process may take a considerable amount of time due to the embedding function. Please be patient while it completes."
    ]
@@ -461,7 +490,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Function to create RAG prompt\n",
+    "## 5. RAG Workflow"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5.1 Function to create RAG prompt\n",
     "\n",
     "Define the `PROMPT_TEMPLATE` and assign roles using `ChatPromptTemplate`. The `<context>` tags represent the document context, while the `<question>` tags represent the user's question."
    ]
@@ -505,7 +541,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Function to query RAG model\n",
+    "### 5.2 Function to query RAG model\n",
     "\n",
     "Loads the MistralAI model, the prompt template, and the vector store (Milvus database). Converts the vector store into a retriever that fetches documents containing relevant context. Constructs a document chain that includes all context-related documents. Creates a retrieval chain that utilizes the documents and retriever to gather context based on the user's question. Additionally, retrieves source metadata from the context documents that have been fetched."
    ]
@@ -586,7 +622,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Get response from RAG\n",
+    "### 5.3 Get response from RAG\n",
     "\n",
     "Send a question to RAG, retrieve the response, and print it."
    ]
