Updated content in the markdown cells

--- a/jupyter/documentation.ipynb
+++ b/jupyter/documentation.ipynb
@@ -142,7 +142,18 @@
    "source": [
     "#### 2.1.1 Function to Check Vector Store (Milvus database)\n",
     "\n",
-    "Creates the `/milvus` directory if it doesn’t already exist, then attempts to connect to the database file. Returns a boolean indicating whether the database was successfully found."
+    "Purpose: \n",
+    "To check if the Milvus vector store already exists at the specified URI.\n",
+    "\n",
+    "Input: Path to the Milvus database `uri` (str).\n",
+    "\n",
+    "Output: \n",
+    "Returns a boolean (True if the vector store exists, False otherwise).\n",
+    "\n",
+    "Processing:\n",
+    "- Creates the /milvus directory if it doesn’t exist.\n",
+    "- Connects to the Milvus database at the specified uri.\n",
+    "- Checks if the collection IT_support exists in the Milvus database."
    ]
   },
   {
@@ -177,7 +188,17 @@
    "source": [
     "#### 2.1.2 Function to fetch the embedding model\n",
     "\n",
-    "Loads the embedding model from HuggingFace using the `MODEL_NAME` environment variable and returns the initialized embedding model."
+    "Purpose:\n",
+    "To load and initialize the embedding model for vectorizing documents.\n",
+    "\n",
+    "Input:\n",
+    "None.\n",
+    "\n",
+    "Output: Returns the embedding function loaded from the Hugging Face model specified in `MODEL_NAME`.\n",
+    "\n",
+    "Processing:\n",
+    "- Loads the embedding model using `HuggingFaceEmbeddings`.\n",
+    "- Returns the initialized embedding function."
    ]
   },
   {
@@ -235,7 +256,7 @@
    "metadata": {},
    "source": [
     "#### 2.2.2 Function to Clean and Extract Text from HTML Content\n",
-    "This function parses HTML content, removes unnecessary elements `scripts, styles, headers, footers, and navigation elements`, and extracts the main text. If a element is present, the function prioritizes its content. The cleaned content is returned as plain text, free from `HTML tags` and unnecessary whitespace."
+    "This function parses HTML content, removes unnecessary elements `scripts, styles, headers, footers, and navigation elements,` and extracts the main text. If a element is present, the function prioritizes its content. The cleaned content is returned as plain text, free from HTML tags and unnecessary whitespace.\n"
    ]
   },
   {
@@ -508,7 +529,18 @@
    "source": [
     "### 3.1 Function to create RAG prompt\n",
     "\n",
-    "Define the `PROMPT_TEMPLATE` and assign roles using `ChatPromptTemplate`. The `<context>` tags represent the document context, while the `<question>` tags represent the user's question."
+    "Purpose:\n",
+    "To create a prompt template for the RAG model with predefined system instructions.\n",
+    "\n",
+    "Input:\n",
+    "None.\n",
+    "\n",
+    "Output:\n",
+    "Returns a `ChatPromptTemplate` object.\n",
+    "\n",
+    "Processing:\n",
+    "- Defines a template with system instructions for generating accurate and context-based responses.\n",
+    "- Initializes a `ChatPromptTemplate` using the system template and a human prompt structure."
    ]
   },
   {
