Updated Document Handling content in the markdown cells

--- a/jupyter/documentation.ipynb
+++ b/jupyter/documentation.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# ITS Chatbot\n",
+    "# ITS Support Chatbot\n",
     "\n",
     "This chatbot is an educational tool that's built to answer questions related to the CSUSB's [Information Technology Services](https://www.csusb.edu/its). The chatbot was built by team 1 for [CSE 6550: Software Engineering Concepts](https://catalog.csusb.edu/coursesaz/cse/)\n",
     "\n",
@@ -233,7 +233,19 @@
    "metadata": {},
    "source": [
     "#### 2.2.1 Function to Clean Text\n",
-    "This function removes `extra whitespace` and `blank lines` from a given text input, returning a more readable, compact version of the text."
+    "Purpose:\n",
+    "To clean a given text by removing extra whitespace and blank lines.\n",
+    "\n",
+    "Input:\n",
+    "- `text` (str): The input text to be cleaned.\n",
+    "\n",
+    "Output:\n",
+    "Returns the cleaned text with unnecessary whitespace and blank lines removed.\n",
+    "\n",
+    "Processing:\n",
+    "- Splits the text into lines and trims leading/trailing spaces from each line.\n",
+    "- Removes empty lines from the text.\n",
+    "- Joins the cleaned lines into a single string."
    ]
   },
   {
@@ -256,7 +268,21 @@
    "metadata": {},
    "source": [
     "#### 2.2.2 Function to Clean and Extract Text from HTML Content\n",
-    "This function parses HTML content, removes unnecessary elements `scripts, styles, headers, footers, and navigation elements,` and extracts the main text. If a element is present, the function prioritizes its content. The cleaned content is returned as plain text, free from HTML tags and unnecessary whitespace.\n"
+    "Purpose:\n",
+    "To extract and clean the main content from an HTML document.\n",
+    "\n",
+    "Input:\n",
+    "- `html_content` (str): The HTML content to be cleaned.\n",
+    "\n",
+    "Output:\n",
+    "Returns the cleaned plain text content extracted from the HTML.\n",
+    "\n",
+    "Processing:\n",
+    "\n",
+    "- Parses the HTML using `BeautifulSoup`.\n",
+    "- Removes unnecessary elements like `<script>, <style>, <header>, <footer>, and <nav>`.\n",
+    "- Extracts text from the `<main>` tag if it exists, or the entire document otherwise.\n",
+    "- Cleans the extracted text using the clean_text function."
    ]
   },
   {
@@ -290,7 +316,22 @@
    "source": [
     "#### 2.2.3 Function for loading documents from the web\n",
     "\n",
-    "Recursively load documents from the web according to `CORPUS_SOURCE`, ensuring that only pages within the base_url of `CORPUS_SOURCE` are retrieved. The function returns the loaded documents."
+    "Purpose:\n",
+    "To recursively load and clean documents from a web source specified in `CORPUS_SOURCE`.\n",
+    "\n",
+    "Input:\n",
+    "None.\n",
+    "\n",
+    "Output:\n",
+    "Returns a list of cleaned documents as `Document` objects.\n",
+    "\n",
+    "Processing:\n",
+    "\n",
+    "- Uses RecursiveUrlLoader to load all pages from the base URL (`CORPUS_SOURCE`).\n",
+    "- Iterates through the loaded documents:\n",
+    "- Cleans the text using `clean_text_from_html`.\n",
+    "- Creates `Document` objects with the cleaned text and metadata.\n",
+    "- Returns the list of cleaned `Document` objects."
    ]
   },
   {
