Added [Purpose, Input, Output, Processing] to markdowns acc to requirements

--- a/jupyter/documentation.ipynb
+++ b/jupyter/documentation.ipynb
@@ -151,7 +151,7 @@
     "Returns a boolean (True if the vector store exists, False otherwise).\n",
     "\n",
     "Processing:\n",
-    "- Creates the /milvus directory if it doesn’t exist.\n",
+    "- Creates the `/milvus` directory if it doesn’t exist.\n",
     "- Connects to the Milvus database at the specified uri.\n",
     "- Checks if the collection IT_support exists in the Milvus database."
    ]
@@ -378,7 +378,15 @@
    "source": [
     "#### 2.3.1 Function to load existing vector store (Milvus database)\n",
     "\n",
-    "Accepts the path to the database and embedding function to establish a connection with the database, returning the connected vector store."
+    "Purpose: To connect to an existing Milvus vector store.  \n",
+    "\n",
+    "Input: Path to the Milvus database (`uri`).  \n",
+    "\n",
+    "Output: Returns the loaded vector store as a Milvus object.  \n",
+    "\n",
+    "Processing:\n",
+    "- Connects to the specified Milvus database.\n",
+    "- Initializes a Milvus object with the collection IT_support and the embedding function from `get_embedding_function`."
    ]
   },
   {
@@ -416,7 +424,17 @@
    "source": [
     "#### 2.3.2 Function to split documents\n",
     "\n",
-    "Takes the documents loaded from `load_documents_from_web` and splits them into chunks of 1000 characters. Overlaps 300 characters to preserve context. Returns the documents split into chunks."
+    "Purpose: To split large documents into smaller chunks for better processing and context preservation.  \n",
+    "\n",
+    "Input: List of documents to be split.  \n",
+    "\n",
+    "Output: Returns a list of document chunks.  \n",
+    "\n",
+    "Processing:\n",
+    "\n",
+    "- Creates a `RecursiveCharacterTextSplitter` with a chunk size of 1000 characters and an overlap of 300 characters.\n",
+    "- Splits each document into smaller chunks using the text splitter.\n",
+    "- Returns the list of document chunks."
    ]
   },
   {
@@ -457,7 +475,22 @@
    "source": [
     "#### 2.3.3 Function to Create New Vector Store (Milvus database)\n",
     "\n",
-    "Uses the documents retrieved from `load_documents_from_web`, the embedding function from `get_embedding_function`, and the database path to establish the vector store. It returns the vector store once it has been created."
+    "Purpose:\n",
+    "To create a new vector store in Milvus using the given documents and embedding function.\n",
+    "\n",
+    "Input(s):\n",
+    "\n",
+    "- `docs` (list): Documents to store in the vector database.\n",
+    "- `embeddings`: The embedding function for vectorizing documents.\n",
+    "- `uri` (str): Path to the Milvus database.  \n",
+    "\n",
+    "Output: Returns the newly created vector store.  \n",
+    "\n",
+    "Processing:\n",
+    "\n",
+    "- Connects to Milvus at the specified uri.\n",
+    "- Creates a new collection named IT_support, dropping any existing one.\n",
+    "- Embeds the documents and stores them in the vector database."
    ]
   },
   {
@@ -499,7 +532,20 @@
    "source": [
     "#### 2.3.4 Core function for initializing Milvus\n",
     "\n",
-    "This is the primary function for initializing Milvus, utilizing the previously defined functions to fully set up the vector store. Executing `initialize_milvus` will invoke all the necessary functions required for creating the vector store."
+    "Purpose: To initialize the Milvus vector store by either loading an existing one or creating a new one.\n",
+    "\n",
+    "Input: Path to the Milvus database `uri`.  \n",
+    "\n",
+    "Output: Returns the initialized vector store.  \n",
+    "\n",
+    "Processing:\n",
+    "- Checks if the vector store already exists using vector_store_check.\n",
+    "- If it exists:  \n",
+    "    - loads it using `load_existing_db`.  \n",
+    "- Otherwise:\n",
+    "    - Loads documents from the web using `load_documents_from_web`.\n",
+    "    - Splits the documents into chunks using `split_documents`.\n",
+    "    - Creates a new vector store using `create_vector_store`."
    ]
   },
   {
@@ -543,8 +589,13 @@
    "metadata": {},
    "source": [
     "#### 2.3.5 Initializing vector store (Milvus database)\n",
+    "Purpose: To initialize the Milvus database system for vector storage and retrieval.  \n",
     "\n",
-    "This process may take a considerable amount of time due to the embedding function. Please be patient while it completes."
+    "Input: None.  \n",
+    "\n",
+    "Output: None.  \n",
+    "\n",
+    "Processing: Calls the `initialize_milvus` function to set up the Milvus vector database system."
    ]
   },
   {
@@ -571,17 +622,15 @@
     "### 3.1 Function to create RAG prompt\n",
     "\n",
     "Purpose:\n",
-    "To create a prompt template for the RAG model with predefined system instructions.\n",
+    "To create a prompt template for the RAG model with predefined system instructions\n",
     "\n",
-    "Input:\n",
-    "None.\n",
+    "Input: None\n",
     "\n",
-    "Output:\n",
-    "Returns a `ChatPromptTemplate` object.\n",
+    "Output: Returns a `ChatPromptTemplate` object\n",
     "\n",
     "Processing:\n",
-    "- Defines a template with system instructions for generating accurate and context-based responses.\n",
-    "- Initializes a `ChatPromptTemplate` using the system template and a human prompt structure."
+    "- Defines a template with system instructions for generating accurate and context-based responses\n",
+    "- Initializes a `ChatPromptTemplate` using the system template and a human prompt structure"
    ]
   },
   {
@@ -625,7 +674,20 @@
    "source": [
     "### 3.2 Function to query RAG model\n",
     "\n",
-    "Loads the MistralAI model, the prompt template, and the vector store (Milvus database). Converts the vector store into a retriever that fetches documents containing relevant context. Constructs a document chain that includes all context-related documents. Creates a retrieval chain that utilizes the documents and retriever to gather context based on the user's question. Additionally, retrieves source metadata from the context documents that have been fetched."
+    "Purpose: To query the RAG model for a response to a user’s question.\n",
+    "\n",
+    "Input: User’s question query.\n",
+    "\n",
+    "Output: Returns the generated response from the RAG model, including source references.\n",
+    "\n",
+    "Processing:\n",
+    "\n",
+    "- Initializes the MistralAI model.\n",
+    "- Loads the prompt template using `create_prompt`.\n",
+    "- Loads the vector store and creates a retriever to fetch relevant documents.\n",
+    "- Creates a document chain and a retrieval chain for generating responses.\n",
+    "- Executes the query and generates a response using the retrieval chain.\n",
+    "- Extracts and appends source metadata to the response."
    ]
   },
   {
@@ -706,7 +768,16 @@
    "source": [
     "### 3.3 Get response from RAG\n",
     "\n",
-    "Send a question to RAG, retrieve the response, and print it."
+    "Purpose: Taking input query from user, executing it and displaying the fetched output.  \n",
+    "\n",
+    "Input: User's question. \n",
+    "\n",
+    "Output: Response generated from the `query_rag` function.\n",
+    "\n",
+    "Processing:\n",
+    "- User input: Prompts the user to input a query.\n",
+    "- Query execution: Passes the user-provided query to the `query_rag` function.\n",
+    "- Response display: Prints the response generated."
    ]
   },
   {
